// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NatModal component and its variants NatModal Should match snapshot 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  save={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(3, 3, 3, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Boas vindas!"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 6,
            "elevation": 8,
            "marginHorizontal": 24,
            "shadowColor": "rgba(0, 0, 0, 0.24)",
            "shadowOffset": Object {
              "height": 16,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 32,
          },
        ]
      }
    >
      <Text
        save={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "NaturaSans-Bold",
              "fontSize": 20,
              "lineHeight": 28,
              "marginBottom": 8,
              "marginTop": 24,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        Boas vindas!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 24,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        Texto de boas vindas
      </Text>
      <View
        accessibilityLabel="ENTENDI"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F4AB34",
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
            "opacity": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "System",
                "letterSpacing": 1,
              },
            ]
          }
        >
          ENTENDI
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`NatModal component and its variants NatModal error should render the error mode 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  save={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(3, 3, 3, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="título"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 6,
            "elevation": 8,
            "marginHorizontal": 24,
            "shadowColor": "rgba(0, 0, 0, 0.24)",
            "shadowOffset": Object {
              "height": 16,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 32,
          },
        ]
      }
    >
      <Text
        save={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "NaturaSans-Bold",
              "fontSize": 20,
              "lineHeight": 28,
              "marginBottom": 8,
              "marginTop": 24,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        título
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 24,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        texto de descrição do modal
      </Text>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          accessibilityLabel="CANCELAR"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomLeftRadius": 6,
              "opacity": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
              "width": "50%",
            }
          }
        >
          <Text
            alternative={true}
            style={
              Array [
                Object {
                  "color": "#F4AB34",
                  "fontFamily": "System",
                  "letterSpacing": 1,
                },
              ]
            }
          >
            CANCELAR
          </Text>
        </View>
        <View
          accessibilityLabel="ENVIAR LINK"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#F4AB34",
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 6,
              "opacity": 1,
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
              "width": "50%",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "System",
                  "letterSpacing": 1,
                },
              ]
            }
          >
            ENVIAR LINK
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`NatModal component and its variants NatModal save should render the save mode 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  save={true}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(3, 3, 3, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="título"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 6,
            "elevation": 8,
            "marginHorizontal": 24,
            "shadowColor": "rgba(0, 0, 0, 0.24)",
            "shadowOffset": Object {
              "height": 16,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 32,
          },
        ]
      }
    >
      <Text
        save={true}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "NaturaSans-Bold",
              "fontSize": 20,
              "lineHeight": 28,
              "marginBottom": 40,
              "marginTop": 40,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        título
      </Text>
      <View
        accessibilityLabel="OK"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F4AB34",
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
            "opacity": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "System",
                "letterSpacing": 1,
              },
            ]
          }
        >
          OK
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
